# simple_hls_client

./: CMakeLists.txt  HLSFetcher.h  HLSTagParser.h  HLSWriter.h  M3U8Parser.h  MediaParser.h  README.md  StreamInfParser.h  Thoughts.md  iFrameParser.h  main.cpp
cmake/: set_build_flags.cmake  setup_configurations.cmake
